# water_your_friends

./: Makefile  README.md  addContacts.js  contactsReducer.js  friendsReducer.js  main.py  package-lock.json  package.json  pyproject.toml
src/: App.js  contacts.js  db_service.py  depends.py  friend.js  friendlist.js  friends.js  models.py  phoneImporter.js
