[tool.poetry]
name = "water-your-friends"
version = "0.1.0"
description = ""
authors = ["Dana Katz-Buchstav <dkbuchshtav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
